src/assets/scss/base/_base.scss
*:focus {
  outline: 0 !important;
  box-shadow:
    0 0 0 .2rem #fff,
    0 0 0 .35rem #069 !important;
}

*:focus:not(.focus-visible) {
  outline: 0 !important;
  box-shadow: none !important;
}

html, body {
  height: 100%;
}

#app {
  height: max-content;
}

